Complete swagger
