# api/controllers/transactionController.js
@@ -1,42 +1,46 @@
 
 const transaction = require('../model/transaction');
-
+const transactionDao = require('../dao/transactionDao');
 
 const createTransactionController = (req, res) => {
 
-    var {name, amount} = req.body;
-    const accountNumber = Number(req.params.accountNumber);
+    var { name, amount } = req.body;
+    const accountNumber = Number(req.swagger.params.accountNumber.value);
     name = String(name);
     amount = parseFloat(amount);
 
     // validate request
     if (Object.keys(req.body).length == 0) {
-        res.status(400).send({
+        res.send({
+            status: 400,
             message: "Content can not be empty!"
         });
         return;
     }
 
     if (accountNumber < 1000000 || accountNumber > 9999999) {
-        res.status(400).send({
+        res.send({
+            status: 400,
             message: "Account number must be 7 digits!"
         });
         return;
     }
 
     if (!name) {
-        res.status(400).send({
+        res.send({
+            status: 400,
             message: "Transaction name can not be empty!"
         });
         return;
     }
     if (!amount) {
-        res.status(400).send({
+        res.send({
+            status: 400,
             message: "Transaction amount can not be empty!"
         });
         return;
     }
-    
+
 
     // creating a new transaction object
     const newTransaction = new transaction();
@@ -46,22 +50,25 @@ const createTransactionController = (req, res) => {
 
     // function call to transaction model class with error handling
     try {
-        transaction.createTransaction(newTransaction, (e, data) => {
+        transactionDao.createTransactionDao(newTransaction, (e, data) => {
             if (data) {
-                res.status(200).send({
+                res.send({
+                    status: 200,
                     message: 'Transaction created successfully'
                 });
                 return;
             }
             else {
-                res.status(500).send({
+                res.send({
+                    status: 500,
                     message: 'Something went wrong creating the transaction'
                 });
                 return;
             }
         });
     } catch (e) {
-        res.status(500).send({
+        res.send({
+            status: 500,
             message:
                 e.message || 'Something went wrong creating the transaction.'
         });
@@ -71,35 +78,38 @@ const createTransactionController = (req, res) => {
 
 const transactionListController = (req, res) => {
 
-    const accountNumber = Number(req.params.accountNumber);
+    const accountNumber = Number(req.swagger.params.accountNumber.value);
 
     // validate request
 
     if (accountNumber < 1000000 || accountNumber > 9999999) {
-        res.status(400).send({
+        res.send({
+            status: 400,
             message: "Account number must be 7 digits!"
         });
         return;
     }
-   
+
 
     // function call to transaction model class with error handling
     try {
-        transaction.transactionList(accountNumber, (e, data) => {
+        transactionDao.transactionListDao(accountNumber, (e, data) => {
             if (data) {
                 res.status(200).send(data);
                 return;
             }
 
             if (e.kind == 'resource_not_available') {
-                res.status(200).send({
+                res.send({
+                    status: 404,
                     message: 'There is no transaction to display.'
                 });
                 return;
             }
 
             else {
-                res.status(500).send({
+                res.send({
+                    status: 500,
                     message:
                         e.message || 'Something went wrong retrieving the transaction.'
                 });
@@ -107,7 +117,8 @@ const transactionListController = (req, res) => {
             }
         });
     } catch (e) {
-        res.status(500).send({
+        res.send({
+            status: 500,
             message:
                 e.message || 'Something went wrong retrieving the transaction.'
         });
@@ -115,4 +126,4 @@ const transactionListController = (req, res) => {
     }
 }
 
-module.exports = {createTransactionController, transactionListController}
+module.exports = { createTransactionController, transactionListController }
