# api/controllers/userController.js
@@ -1,4 +1,4 @@
-const user = require('../model/user');
+const userDao = require('../dao/userDao');
 
 const userLoginController = (req, res) => {
 
@@ -6,28 +6,32 @@ const userLoginController = (req, res) => {
 
     // Validate request
     if (Object.keys(req.body).length == 0) {
-        res.status(400).send({
+        res.send({
+            status: 400,
             message: "Content can not be empty!"
         });
         return;
     }
 
     if (!clientCardNumber) {
-        res.status(400).send({
+        res.send({
+            status: 400,
             message: "Client Card Number can not be empty!"
         });
         return;
     }
 
     if (clientCardNumber < 1000000000000000 || clientCardNumber > 9999999999999999) {
-        res.status(400).send({
+        res.send({
+            status: 400,
             message: "Client card number must be 16 digits!"
         });
         return;
     }
 
     if (!password) {
-        res.status(400).send({
+        res.send({
+            status: 400,
             message: "Password can not be empty!"
         });
         return;
@@ -35,26 +39,30 @@ const userLoginController = (req, res) => {
 
     // function call to user model class with error handling
     try {
-        user.userLogin(clientCardNumber, password, (e, data) => {
+        userDao.userLoginDao(clientCardNumber, password, (e, data) => {
             if (data) {
-                res.status(200).send({
+                res.send({
+                    status: 200,
                     message: 'Login successful'
                 });
                 return;
             }
             if (e.kind === 'not_found') {
-                res.status(404).send({
+                res.send({
+                    status: 404,
                     message: 'User not found.'
                 });
                 return;
             }
             if (e.kind === 'unauthorized') {
-                res.status(401).send({
+                res.send({
+                    status: 401,
                     message: 'Credential incorrect.'
                 });
                 return;
             } else {
-                res.status(500).send({
+                res.send({
+                    status: 500,
                     message:
                         e.message || 'Some error occurred while logging in.'
                 });
@@ -62,7 +70,8 @@ const userLoginController = (req, res) => {
             }
         });
     } catch (e) {
-        res.status(500).send({
+        res.send({
+            status: 500,
             message:
                 e.message || 'Some error occurred while logging in.'
         });
@@ -71,4 +80,5 @@ const userLoginController = (req, res) => {
 }
 
 module.exports = {
-    userLoginController}
+    userLoginController
+}
