# api/model/user.js
@@ -1,5 +1,3 @@
-const {connection} = require('../database.js')
-
 
 /**
  * user object
@@ -20,37 +18,5 @@ const {connection} = require('../database.js')
   this.dateOfBirth = dateOfBirth;
 }
 
-
-User.userLogin = (clientCardNumber, password, result) => {
-
-  const sqlQuery = `SELECT * FROM BANKING_SERVICE.USER WHERE CLIENTCARDNUMBER = ${clientCardNumber}`;
-
-  connection.query(sqlQuery, function(e, data) {
-      // if query gives error
-      if (e) {
-        console.log('error: ', e);
-        result(e, null);
-        return;
-      }
-
-      // if client has been found 
-      if ((data.length) && (data[0].clientCardNumber === clientCardNumber) && (data[0].password === password)) {
-        console.log('Login successful');
-        result(null, data[0]);
-        return;
-      }
-
-      // client not found
-      if (Object.keys(data).length == 0) {
-        console.log('user not found');
-        result({ kind: 'not_found' }, null);
-        return;
-      }
-
-      // Credentials incorrect
-      console.log('unauthorized');
-      result({ kind: 'unauthorized' }, null);
-    });
-};
 
 module.exports = User;
